tests/type/errors/bad_unreachable1.typedsol
8:5 error: Unreachable statement